--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {
+  "devDependencies": {
+    "css-loader": "^7.1.1",
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "wepack-cli": "^0.0.1-security"
   }
