--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
     "wepack-cli": "^0.0.1-security"
+  },
+  "scripts": {
+    "build": "npx webpack"
+  },
+  "dependencies": {
+    "boxicons": "^2.1.4"
   }
 }
