--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "wepack-cli": "^0.0.1-security"
   },
   "scripts": {
-    "build": "npx webpack"
+    "build": "npx webpack",
+    "push": "git push && git subtree --prefix dist origin gh-pages"
   },
   "dependencies": {
     "boxicons": "^2.1.4"
