--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "devDependencies": {
     "css-loader": "^7.1.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "img-loader": "^4.0.0",
     "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "wepack-cli": "^0.0.1-security"
   },
   "scripts": {
     "build": "npx webpack",
-    "push": "git push && git subtree --prefix dist origin gh-pages"
+    "push": "git push && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "boxicons": "^2.1.4"
